--- a/packages/create-theme/public/template/posts/主题测试.md
+++ b/packages/create-theme/public/template/posts/主题测试.md
@@ -31,7 +31,7 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 ```
 
-代码突出
+### 代码突出
 
 ```typescript{6}
 document.addEventListener("DOMContentLoaded", () => {
@@ -57,6 +57,10 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 ```
+
+### 行内代码
+
+`index.d.ts`：定义 VitePress 中使用的各种类型，包括配置对象、主题配置、插件接口等
 
 ## 图片
 
