--- a/packages/create-theme/public/template/posts/主题测试.md
+++ b/packages/create-theme/public/template/posts/主题测试.md
@@ -2,7 +2,53 @@
 layout: page
 ---
 
+本文章用于测试主题功能是否可以正常使用
+
+<!--more-->
+
 # 主题测试
+
+## 摘要
+
+> 使用`<!--more-->`来截取摘要
+
+## 段落
+
+**痛苦啊，你便是我的唯一（加粗）**
+
+除了你，我皆无欲求
+
+**痛苦啊，你忠实的陪伴我，直至现在也没有一丝改变**
+
+当我的灵魂徘徊于深渊之底
+
+唯有你相伴在我身旁，守护着我
+
+我又怎能埋怨你呢
+
+**痛苦啊，你绝不会从我身旁遁走**
+
+我终于能表达对你的尊敬
+
+现在也认识到你的存在
+
+而你只是存于世，便那么美丽
+
+**痛苦啊，你就像那从未离开我那贫苦的心之火炉旁的人一样**
+
+比我那身为至爱的恋人还要多情
+
+我知道在我迈向死亡的那一天
+
+*你会走进我内心的深处（斜体）*
+
+与我并排躺下
+
+> 目前使用的解析器不支持高亮`==highlight==`，遇到中文括号可能会出错
+
+## 任务列表
+
+- [x] task 1
 
 ## 代码
 
