--- a/packages/create-theme/public/template/posts/主题测试.md
+++ b/packages/create-theme/public/template/posts/主题测试.md
@@ -10,6 +10,22 @@ tags:
 
 <!--more-->
 
+# 标题
+
+本部分主要用来测试目录。
+
+## 二级标题
+
+### 三级标题
+
+#### 四级标题
+
+##### 五级标题
+
+## EMOJI 🤤
+
+🧩😅🧩😄💔😄👌✋✋🥽🖼️🎠🛝🫲🎐
+
 ## 摘要
 
 > 使用`<!--more-->`来截取摘要
@@ -51,6 +67,8 @@ tags:
 ## 任务列表
 
 - [x] task 1
+
+留档
 
 ## 代码
 
