--- a/packages/create-theme/public/template/posts/主题测试.md
+++ b/packages/create-theme/public/template/posts/主题测试.md
@@ -174,3 +174,53 @@ document.addEventListener("DOMContentLoaded", () => {
 $$
 \frac{\partial \ln L\left(\theta_{1}, \theta_{2}, \cdots, \theta_{l}\right)}{\partial \theta_{k}}=0, k=1,2, \cdots, l
 $$
+
+## Vitepress内置内容
+
+## Custom Containers
+
+**Input**
+
+```md
+::: info
+This is an info box.
+:::
+
+::: tip
+This is a tip.
+:::
+
+::: warning
+This is a warning.
+:::
+
+::: danger
+This is a dangerous warning.
+:::
+
+::: details
+This is a details block.
+:::
+```
+
+**Output**
+
+::: info
+This is an info box.
+:::
+
+::: tip
+This is a tip.
+:::
+
+::: warning
+This is a warning.
+:::
+
+::: danger
+This is a dangerous warning.
+:::
+
+::: details
+This is a details block.
+:::
